@@ -1,3 +1,7 @@
+Tue Sep 22 19:17:54 CEST 2015
+	Do not use shutdown() on listen socket if MHD_USE_PIPE_FOR_SHUTDOWN
+	is set. -CG
+
 Wed Sep 16 11:06:02 CEST 2015
 	Releasing libmicrohttpd 0.9.43. -CG
 
